// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.notify.v1;

option go_package = "go.chromium.org/luci/luci_notify/api/service/v1;lucinotifypb";

// Service to query tree closer data on the server.
//
// Use of LUCI is subject to the Google [Terms of Service](https://policies.google.com/terms)
// and [Privacy Policy](https://policies.google.com/privacy).
service TreeCloser {
  // Checks if the builder in CheckTreeCloserRequest is tree-closer or not
  rpc CheckTreeCloser(CheckTreeCloserRequest) returns (CheckTreeCloserResponse) {};
}

message CheckTreeCloserRequest {
  // Project of the builder
  string project = 1;
  // Bucket of the builder
  string bucket = 2;
  // Name of the builder
  string builder = 3;
  // Some tree closers are only close if some particular steps failed.
  string step = 4;
}

message CheckTreeCloserResponse {
  // Whether this is a tree closer
  bool is_tree_closer = 1;
}
